[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Interactables/LevelMechanics/FallingPlat.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 5 )

[node name="FallingPlat" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.101961, 0.768627, 0.317647, 1 )
position = Vector2( 1.42857, 14 )
scale = Vector2( 1.20536, 0.4375 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="KinematicBody2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 8 )
shape = SubResource( 1 )
one_way_collision = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="FallPoint" type="Position2D" parent="."]
position = Vector2( 0, 192 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
